Foreign influence continent modifier

--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -122,6 +122,7 @@
  foreign_influence_defense_modifier_desc: "$foreign_influence_defense_modifier$ is an modifier that weakens incoming foreign influence actions in our nation."
  foreign_influence_modifier: "£foreign_influence_modifier_texticon §YForeign Influence§! Multiplier"
  influence_coup_modifier: "£foreign_influence_auto_influence_cap_modifier_texticon  §YForeign Influence§! Coup Success Factor"
+ foreign_influence_continent_modifier: "£foreign_influence_modifier_texticon §YForeign Influence§! Against Countries Not On Home Continent"
  foreign_influence_auto_influence_cap_modifier: "£foreign_influence_auto_influence_cap_modifier_texticon §YForeign Influence§! Auto-Influence Cap"
  tax_gain_multiplier_modifier: "£tax_gain_multiplier_modifier_texticon §YTax Revenue§! Multiplier"
  interest_rate_multiplier_modifier: "£interest_rate_multiplier_modifier_texticon §YInterest Rate§!"
