--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ v1.10.0
   - Decrease expected military spending for Emerging conservatives and neutral liberals by 0.5 - from 3 to 2.5 and from 2 to 1.5 respectfully
   - Medium military spending(level 4) is now maximum expected spending during peace
   - Gigantic military spending(level 6) is now maximum expected military spending during war
+  - Lower power ranking now has a penalty to Foreign Influence when influencing abroad (Superpower can influence anywhere without any reductions)
 
  Bugfixes:
   - Fixed a bug when the opinion modifiers reached 100 or -100 due to an incorrectly configured decay
