--- a/localisation/english/MD_focus_PMR_l_english.yml
+++ b/localisation/english/MD_focus_PMR_l_english.yml
@@ -659,4 +659,20 @@
  PMR_soviet: "Transnistrian SSR"
  PMR_sheriff: "The Corporate State Sheriff"
 
+ PMR_rusempire_fascism: "Russia"
+ PMR_rusempire_fascism_DEF: "Russia"
+ PMR_rusempire_democratic: "Russia"
+ PMR_rusempire_democratic_DEF: "Russia"
+ PMR_rusempire_communism: "Russia"
+ PMR_rusempire_communism_DEF: "Russia"
+ PMR_rusempire_neutrality: "Russia"
+ PMR_rusempire_neutrality_DEF: "Russia"
+ PMR_rusempire_fascism_ADJ: "Russia"
+ PMR_rusempire_democratic_ADJ: "Russia"
+ PMR_rusempire_communism_ADJ: "Russia"
+ PMR_rusempire: "Russia"
+ PMR_rusempire_nationalist: "Russia"
+ PMR_rusempire_nationalist_DEF: "Russia"
+ PMR_rusempire_nationalist_ADJ: "Russia"
+
  PMR_it_giant: "IT Investments"
