--- a/localisation/simp_chinese/MD_focus_PMR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PMR_l_simp_chinese.yml
@@ -615,3 +615,18 @@
  transnistria.28.t: "联合军事行动"
  transnistria.28.d: "敖德萨共和国立即向我们寻求军事援助。 现在我们的部队可以在两国领土上移动。"
  transnistria.28.a: "很好"
+ PMR_rusempire_fascism: "俄罗斯"
+ PMR_rusempire_fascism_DEF: "俄罗斯"
+ PMR_rusempire_democratic: "俄罗斯"
+ PMR_rusempire_democratic_DEF: "俄罗斯"
+ PMR_rusempire_communism: "俄罗斯"
+ PMR_rusempire_communism_DEF: "俄罗斯"
+ PMR_rusempire_neutrality: "俄罗斯"
+ PMR_rusempire_neutrality_DEF: "俄罗斯"
+ PMR_rusempire_fascism_ADJ: "俄罗斯"
+ PMR_rusempire_democratic_ADJ: "俄罗斯"
+ PMR_rusempire_communism_ADJ: "俄罗斯"
+ PMR_rusempire: "俄罗斯"
+ PMR_rusempire_nationalist: "俄罗斯"
+ PMR_rusempire_nationalist_DEF: "俄罗斯"
+ PMR_rusempire_nationalist_ADJ: "俄罗斯"
