--- a/localisation/simp_chinese/MD_wars_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_wars_l_simp_chinese.yml
@@ -48,3 +48,69 @@
  WAR_ENVIRONMENTAL_NAME: "环境战争"
  WAR_NAME_CHI_MON: "特别军事行动"
  WAR_NAME_BRM_NHN: "缅甸的内部冲突"
+ WAR_NAME_JAP_SOV: "第二次日俄战争"
+ WAR_NAME_SOV_JAP: "第二次日俄战争"
+ WAR_NAME_JAP_MNT: "日俄战争"
+ WAR_NAME_MNT_JAP: "日俄战争"
+ WAR_NAME_JAP_KOR: "日韩战争"
+ WAR_NAME_KOR_JAP: "日韩战争"
+ WAR_NAME_JAP_NKO: "日朝战争"
+ WAR_NAME_NKO_JAP: "日朝战争"
+ WAR_NAME_JAP_TAI: "第三次中日战争"
+ WAR_NAME_TAI_JAP: "第三次中日战争"
+ WAR_NAME_JAP_USA: "第二次太平洋战争"
+ WAR_NAME_USA_JAP: "第二次太平洋战争"
+ WAR_NAME_JAP_CSA: "第二次太平洋战争"
+ WAR_NAME_CSA_JAP: "第二次太平洋战争"
+ WAR_NAME_JAP_AST: "第二次太平洋战争"
+ WAR_NAME_AST_JAP: "第二次太平洋战争"
+ WAR_NAME_JAP_PHI: "第二次大东亚战争"
+ WAR_NAME_PHI_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_INS: "第二次大东亚战争"
+ WAR_NAME_INS_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_PAP: "第二次大东亚战争"
+ WAR_NAME_PAP_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_SOL: "第二次大东亚战争"
+ WAR_NAME_SOL_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_MIC: "第二次大东亚战争"
+ WAR_NAME_MIC_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_FIJ: "第二次大东亚战争"
+ WAR_NAME_FIJ_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_PLY: "第二次大东亚战争"
+ WAR_NAME_PLY_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_MAY: "第二次大东亚战争"
+ WAR_NAME_MAY_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_BRU: "第二次大东亚战争"
+ WAR_NAME_BRU_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_VIE: "第二次大东亚战争"
+ WAR_NAME_VIE_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_SIA: "第二次大东亚战争"
+ WAR_NAME_SIA_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_LAO: "第二次大东亚战争"
+ WAR_NAME_LAO_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_CBD: "第二次大东亚战争"
+ WAR_NAME_CBD_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_BRM: "第二次大东亚战争"
+ WAR_NAME_BRM_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_KAR: "第二次大东亚战争"
+ WAR_NAME_KAR_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_KAC: "第二次大东亚战争"
+ WAR_NAME_KAC_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_WAA: "第二次大东亚战争"
+ WAR_NAME_WAA_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_SHN: "第二次大东亚战争"
+ WAR_NAME_SHN_JAP: "第二次大东亚战争"
+ WAR_NAME_JAP_RYU: "第二次琉球处分"
+ WAR_NAME_RYU_JAP: "琉球独立战争"
+ WAR_NAME_JAP_JPW: "第三次日本内战"
+ WAR_NAME_JAP_JPC: "第三次日本内战"
+ WAR_NAME_JAP_JPK: "第三次日本内战"
+ WAR_NAME_JPW_JAP: "第三次日本内战"
+ WAR_NAME_JPW_JPC: "第三次日本内战"
+ WAR_NAME_JPW_JPK: "第三次日本内战"
+ WAR_NAME_JPC_JAP: "第三次日本内战"
+ WAR_NAME_JPC_JPW: "第三次日本内战"
+ WAR_NAME_JPC_JPK: "第三次日本内战"
+ WAR_NAME_JPK_JAP: "第三次日本内战"
+ WAR_NAME_JPK_JPW: "第三次日本内战"
+ WAR_NAME_JPK_JPC: "第三次日本内战"
