--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -5057,9 +5057,12 @@
  DEN.anarchist_communism: "£DEN_anarchist_communism Enhedslisten"
  DEN.anarchist_communism_icon: "£DEN_anarchist_communism"
  DEN.anarchist_communism_desc: "Enhedslisten (Red-Green Alliance) is an eco-socialist party in Denmark founded in 1989 with the merger of three Marxist parties and it is the furthest left-wing party in the Danish parliament. The party campaigns on socialist and democratic grassroots party which claim to also represent green politics, peace movements, anti-discrimination, and the trade union movement."
- DEN.Neutral_conservatism: "£DEN_non_aligned_conservative Liberal Alliance"
+ DEN.Neutral_conservatism: "£DEN_non_aligned_conservative Centrum Demokraterne"
  DEN.Neutral_conservatism_icon: "£DEN_non_aligned_conservative"
- DEN.Neutral_conservatism_desc: "The Liberal Alliance is a classical liberal and right-libertarian political party in Denmark. It is a component of the centre-right bloc and was founded in 2007 as a split from the Social Liberal Party."
+ DEN.Neutral_conservatism_desc: "The Centrum-Demokraterne is a party that´s ideology was a mix of centrism, social democracy, and liberal conservatism. The party was formed in 1973 by Erhard Jakobsen, a former MP and mayor of Gladsaxe, as a centrist splinter group from the Danish Social Democrats"
+  DEN.Neutral_conservatism_alt: "£DEN_non_aligned_conservative Liberal Alliance"
+ DEN.Neutral_conservatism_alt_icon: "£DEN_non_aligned_conservative"
+ DEN.Neutral_conservatism_alt_desc: "The Liberal Alliance is a classical liberal and right-libertarian political party in Denmark. It is a component of the centre-right bloc and was founded in 2007 as a split from the Social Liberal Party."
  DEN.Neutral_conservatism_2017: "£DEN_non_aligned_conservative_alt Kristendemokraterne"
  DEN.Neutral_conservatism_2017_icon: "£DEN_non_aligned_conservative_alt"
  DEN.Neutral_conservatism_2017_desc: "Kristendemokraterne (Christian Democrats) is a chiristian"
@@ -5084,6 +5087,9 @@
  DEN.Nat_Populism: "£DEN_Nat_Populism Dansk Folkeparti"
  DEN.Nat_Populism_icon: "£DEN_Nat_Populism"
  DEN.Nat_Populism_desc: "Dansk Folkeparti (Danish People's Party) is the leading nationalist and right-wing populist party in Denmark. It was founded in 1995 by former members of the Progress Party. It campaigns on the platform of anti-immigration, protect the freedom and cultural heritage of the Danish people, promote entrepreneurship, and economic growth. They are also seeking to protect Denmark's soverignty against the European Union. The party's economic policies sit closer to the center and center left placing it in a unique light in Danish society. The staunch anti-immigration stance places it firmly on the nationalist and right-wing populist place on the Danish political spectrum."
+ DEN.Nat_Populism_alt: "£DEN_Nat_Populism_alt Nye Borgerlige"
+ DEN.Nat_Populism_alt_icon: "£DEN_Nat_Populism_alt"
+ DEN.Nat_Populism_alt_desc: "Nye Borgerlige (Danish People's Party) is the leading nationalist and right-wing populist party in Denmark. It was founded in 1995 by former members of the Progress Party. It campaigns on the platform of anti-immigration, protect the freedom and cultural heritage of the Danish people, promote entrepreneurship, and economic growth. They are also seeking to protect Denmark's soverignty against the European Union. The party's economic policies sit closer to the center and center left placing it in a unique light in Danish society. The staunch anti-immigration stance places it firmly on the nationalist and right-wing populist place on the Danish political spectrum."
  DEN.Monarchist: "£DEN_nationalist_monarchist House of Glücksburg"
  DEN.Monarchist_icon: "£DEN_nationalist_monarchist"
  DEN.Monarchist_desc: "The House of Glücksburg is a collateral branch of the German House of Oldenburg currently led by Queen Margrethe II of Denmark. The house has held the dynastic lineage of the Kingdom of Denmark since 1863 with an unbroken succession."
