Finished project cleanup
* Simplified focus names in "national_focus/greenland.txt"
* Added localizations for may things missing in national focus
* Replaced certain content with "Cultural Integrity", rework included.
* Fixed agriculture events

--- a/localisation/english/MD_focus_GRN_l_english.yml
+++ b/localisation/english/MD_focus_GRN_l_english.yml
@@ -41,6 +41,10 @@
  
  GRN_Creating_Foreign_Ministry:0 "Creating Foreign Ministry"
  
+ ###################
+ ## ALCOHOL ABUSE ##
+ ###################
+
  GRN_Extremely_High_Alcohol_Abuse:0 "Extremely High Alcohol Abuse"
  GRN_Extremely_High_Alcohol_Abuse_desc:0 "For the longest of time, alcohol abuse has long been a major point of contention within Greenlandic society. Its a burden on national heathcare resources and spreads misery across all corners of society.\nCurrent: [?GRN.alcohol_abuse_var|0-]"
  
@@ -68,17 +72,28 @@
  GRN_Sober_Populace:0 "Sober Populace"
  GRN_Sober_Populace_desc:0 "The populace is free from the shackes and misery that alcohol has induced upon our society. Wounds are starting to heal, but the scars still run deep, and the families and people who fell victem to their crimes will never forget...\nCurrent: [?GRN.alcohol_abuse_var|0-]"
  
- GRN_High_Unalive:0 "High Self-Harm"
- GRN_High_Unalive_desc:0 "\nCurrent: [?GRN.unalive_var|0-]"
- 
- GRN_Medium_Unalive:0 "Medium Self-Harm"
- GRN_Medium_Unalive_desc:0 "\nCurrent: [?GRN.unalive_var|0-]"
- 
- GRN_Low_Unalive:0 "Low Self-Harm"
- GRN_Low_Unalive_desc:0 "\nCurrent: [?GRN.unalive_var|0-]"
- 
+ ########################
+ ## CULTURAL INTEGRITY ##
+ ########################
+
  GRN_Happy_Populace:0 "Happy Populace"
- GRN_Happy_Populace_desc:0 "Across our land, we will hear songs and praises of tearous joy, as many reminisce and thank for those within their lives and their communities for getting them help and presenting them with salvation from self-harm. The cries and voices the people who have passed, will resonate across the land. Forever...\nCurrent: [?GRN.alcohol_abuse_var|0-]"
+ GRN_Happy_Populace_desc:0 "We as a nation take pride in our unique national identity. We have now gotten to the point where a melting pot of ideas can take shape with our society.\nCurrent: [?GRN.cultural_integrity_var|0+]"
+
+ GRN_High_Cultural_integrity:0 "High Cultural Integrity"
+ GRN_High_Cultural_integrity_desc:0 "\nCurrent: [?GRN.cultural_integrity_var|0+]"
+ 
+ GRN_Medium_Cultural_integrity:0 "Medium Cultural Integrity"
+ GRN_Medium_Cultural_integrity_desc:0 "\nCurrent: [?GRN.cultural_integrity_var|0+]"
+ 
+ GRN_Low_Cultural_integrity:0 "Low Cultural Integrity"
+ GRN_Low_Cultural_integrity_desc:0 "\nCurrent: [?GRN.cultural_integrity_var|0+]"
+ 
+ GRN_Assimilated_Populace:0 "Assimilated Populace"
+ GRN_Assimilated_Populace:0 "Our nation and our people have finally succumbed to the cultural coersion by foreign powers and we are no longer distinguishable to the nations surrounding us.\nCurrent: [?GRN.cultural_integrity_var|0+]"
+ 
+ ##############
+ ## RELIGION ##
+ ##############
  
  GRN_inuit_spiritualism:0 "Inuit Spiritualism"
  GRN_inuit_spiritualism_desc:0 "Inuit spiritualism is a series fokelores and mythologies that have ben recounted orally by generations of shamans and elders dating back thousands of years. The Inuit believe in a pantheon of deities that preside over the occurences of natural phenomenon and of the environment and also believe that within living entities, be it an animal, human, supernatual entity, and even plants contain within them a spirit or 'breath' known as 'Anirniit'. It is said that because everything has a spirit, it's considered just as grave offence to kill another lifeform without following proper rituals, as it is no different to killing a fellow human. The 'anirniit' is considered as an integral part of the surrounding ambience known as 'Sila', and many Inuit pay tribute and gain charactarisics of a certain spirit by taking its name or further more invoked by those who share a connection to the spirit."
@@ -91,15 +106,18 @@
  ########################
 
  GRN_national_wellbeing:0 "National Wellbeing"
- GRN_remove_alcohol_abuse_tt:0 "Remove your current idea with §YGreenlandic Alcohol Abuse§!\n"
- GRN_modify_alcohol_abuse_tt:0 "Greenlandic alcohol abuse changes by [?GRN.modify_alcohol_abuse|0=-] (Current: [?GRN.alcohol_abuse_var|0-])"
+
  GRN_alcohol_abuse_tt:0 "Greenlandic Alcohol Abuse"
  GRN_alcohol_abuse_info_tt:0 "Alcohol Abuse: [?GRN.alcohol_abuse_var|0-]"
 
- GRN_remove_unalive_tt:0 "Remove your current idea with §YGreenlandic Self-Harm§!\n"
- GRN_modify_unalive_tt:0 "Greenlandic self-harm changes by [?GRN.modify_unalive|0=-] (Current: [?GRN.unalive_var|0-])"
- GRN_unalive_tt:0 "Greenlandic Self-Harm"
- GRN_unalive_info_tt:0 "Self-Harm: [?GRN.unalive_var|0-]"
+ GRN_remove_alcohol_abuse_tt:0 "Removes your current idea with §YGreenlandic Alcohol Abuse§!\n"
+ GRN_modify_alcohol_abuse_tt:0 "Greenlandic alcohol abuse changes by [?GRN.modify_alcohol_abuse|0=-] (Current: [?GRN.alcohol_abuse_var|0-])"
+ 
+ GRN_cultural_integrity_tt:0 "Greenlandic Cultural Integrity"
+ GRN_cultural_integrity_info_tt:0 "Cultural Integrity: [?GRN.cultural_integrity_var|0-]"
+ 
+ GRN_remove_cultural_integrity_tt:0 "Removes your current idea with §YGreenlandic Cultural Integrity§!\n"
+ GRN_modify_cultural_integrity_tt:0 "Greenlandic Cultural Integrity changes by [?GRN.modify_cultural_integrity|0=-] (Current: [?GRN.cultural_integrity_var|0-])"
 
  ############
  ## EVENTS ##
@@ -109,8 +127,8 @@
  greenland.1.d:0 "According our Ministry for Health and Human Services, the comsupmtion of alcoholic beverages amongst the populace has changed by [?GRN.modify_alcohol_abuse|0=-]!"
  greenland.1.a:0 "OK"
 
- greenland.2.t:0 "A change in national self-harm!"
- greenland.2.d:0 "According our Ministry for Health and Human Services, the instances of self-harm amongst the populace has changed by [?GRN.modify_unalive|0=-]!"
+ greenland.2.t:0 "A change in national cultural integrity!"
+ greenland.2.d:0 "According our Ministry for Domestic Affairs and the National Intelligence Agency, our cultural integrity and our sovereignty has changed by [?GRN.modify_cultural_integrity|0=-]!"
  greenland.2.a:0 "OK"
  
  arctic_railway_NAME: "...Because thats the way things happen on the Polar Express!"
@@ -419,8 +437,8 @@
  GRN_Danish_Foreign_Policy:0 "Countinue Dependence on Denmark"
  GRN_Danish_Foreign_Policy_desc:0 "We have been part of Denamrk for too long, so we can't ust leave them like that, we should increase our ties with the mainland"
  
- GRN_Russian_Ties:0 "Russian Ties"
- GRN_Russian_Ties_desc:0 "Russia could be an important partner, if we strenghten out ties with them."
+ GRN_Russian_Ties:0 "A Drink with the Russian Bear"
+ GRN_Russian_Ties_desc:0 "Russia could be an important partner if we strenghten our ties with them."
  
  GRN_Russian_Investors:0 "Russian Investors"
  GRN_Russian_Investors_desc:0 "Inviting Russian investors could help expand our economy."
@@ -428,8 +446,8 @@
  GRN_Soviet_Army_Discipline:0 "Russian Army Discipline"
  GRN_Soviet_Army_Discipline_desc:0 "The Russian army is one of the biggest armies in the world with a tradition dating back hundreds of years. We could probably learn something from the accumulation of knowledge the Russians have to offer."
  
- GRN_American_Ties:0 "American Ties"
- GRN_American_Ties_desc:0 "America is our partner, and they have helped us many times, we should invest in making them our closer friends"
+ GRN_American_Ties:0 "The Great North American Wilderness"
+ GRN_American_Ties_desc:0 "America is our partner, having helped us many times. In return, we should invest in making the NAFTA member states our closest friends."
  
  GRN_American_Airbases:0 "American Airbases"
  GRN_American_Airbases_desc:0 "America has a reason to protect us, our island could be us as naval, or air base, and we have an important geographical posititon. USA will be happy if we let them create some airbases in our country "
@@ -463,4 +481,235 @@
  
  GRN_Expand_our_autonomy:0 "Expand our Autonomy"
  GRN_Expand_our_autonomy_desc:0 ""
+
+ # MISC FOCUSES
+
+ GRN_High_Command:0 "High Command"
+ GRN_Refurbish_Abandoned_Equipment:0 "Refurbish Abandoned Equipment"
+ GRN_Military_Factories:0 "Native Arms Industry"
+ GRN_Joint_Arctic_Command:0 "Take Charge of the Joint Arctic Command"
+ GRN_Winter_Acclimatization_Traning:0 "Winter Acclimatization Traning"
+ GRN_Proficient_Arctic_Resilience:0 "Proficient Arctic Resilience"
+ GRN_Mobile_Warfare:0 "Mobile Warfare"
+ GRN_Adaptive_Technicals:0 "Adaptive Technicals"
+ GRN_Expanding_Response_Effectiveness:0 "Expanding Response Effectiveness"
+ GRN_Domestic_Security:0 "Domestic Security"
+ GRN_Civilian_Guard:0 "Forming the Civilian Guard"
+ GRN_Special_Forces:0 "Greenlandic Special Forces"
+ GRN_International_Security:0 "International Security"
+ GRN_Peacekeeping_Missions:0 "Join UN Peacekeeping Missions"
+ GRN_Kangerlussuaq_Aviation_School:0 "AFMS"
+ GRN_Technical_Assistance_Training:0 "Reffiting Older Aircraft"
+ GRN_Thule_Base_Question:0 "Thule Base Question"
+ GRN_Continue_American_Leasing:0 "Continue American Leasing"
+ GRN_Expand_Radar_Systems:0 "Expand the Radar Systems"
+ GRN_Reaquire_Thule_Base:0 "Reaquire Thule"
+ GRN_Improving_Base_Infrastructure:0 "Improving Base Infrastructure"
+ GRN_Naval_Exercises:0 "Engage in Naval Exersizes"
+ GRN_Icebreaker_Fleet:0 "The Icebreaker Fleet"
+ GRN_Arctic_Fleet_Plans:0 "Arctic Fleet Plans"
+ GRN_Qaanaq_Space_base:0 "Qaanaq Space Base"
+ GRN_Atmospheric_Monitoring:0 "Atmospheric Monitoring"
+ GRN_Lidar_Climate_Research:0 "Lidar Climate Satellites"
+ GRN_Looking_to_the_Stars:0 "Looking to the Stars"
+ GRN_Innovative_Learning:0 "Promoting Innovative Learning"
+ GRN_Secure_School_Funding:0 "Secure School Funding"
+ GRN_Nurturing_Local_Industries:0 "Nurturing Local Industries"
+ GRN_Air_Greenland_Coverage:0 "Air Greenland Expansions"
+ GRN_Technical_Institutions:0 "Technical Institutions"
+ GRN_Invite_Foreign_Intellectuals:0 "Inviting Foreign Intellectuals"
+ GRN_Subzero_Research:0 "Subzero Research"
+ GRN_Improving_Northern_Agriculture:0 "Improving Northern Agriculture"
+ GRN_Greenhouse_Substinance:0 "Greenhouse Substinance"
+ GRN_Light_Dairy_Industry:0 "Light Dary Industry"
+ GRN_A_Hand_in_Refreshment_Making:0 "REPLACE_ME"
+ GRN_Greenlandic_Resources:0 "Greenlandic Resources"
+ GRN_Offshore_Petroleum_Extraction:0 "Offshore Petroleum Extraction"
+ GRN_The_Arctic_Petroleum_Superpower:0 "REPLACE_ME"
+ GRN_Export_Nuclear_Fuel_Abroad:0 "Exporting Nuclear Fuel Abroad"
+ GRN_Path_Foward:0 "The Path Foward"
+ GRN_Climate_Change_Inititives:0 "Climate Change Initiaves"
+ GRN_Environmental_Industrial_Policies:0 "Environmental Industrial Policies"
+ GRN_Promising_Future:0 "A More Promising Future"
+ GRN_Addressing_Industrial_Challenges:0 "Addressing Industrial Challenges"
+ GRN_Riding_the_Tides:0 "Riding the Ecomomic Tides"
+ GRN_Prosperous_Future:0 "A More Prosperous Future"
+ GRN_No_Data:0 "An Empire of Asterisks"
+ GRN_Managing_Food_Insecurity:0 "Getting a Hold on Food Insecurity"
+ GRN_Developing_Internet_Infrastructure:0 "Developing Internet Infrastructure"
+ GRN_Hydrosphere_Management:0 "Cryosphere and Hydrosphere Management"
+ GRN_Healthcare_Improvements:0 "Healthcare Improvements"
+ GRN_Rediscovering_Inuit_Identity:0 "Rediscovering Inuit Identity"
+ GRN_Promoting_Greenlandic_Language:0 "Promoting the Greenlandic Language"
+ GRN_Ignite_Inuit_Nationalism:0 "Igniting Inuit Nationalism"
+ GRN_National_Constitution:0 "Writing the Greenlandic Constitution"
+ GRN_Reform_Inatsisartut:0 "Reforming the Inatsisartut"
+ GRN_Presidential_Democracy:0 "Establishing Presidential Democracy"
+ GRN_Consensus_Democracy:0 "Engage in Consensus Democracy"
+ GRN_Parliamentary_Democracy:0 "Strenghten Parliamentary Democracy"
+ GRN_Federal_Doctrine:0 "REPLACE_ME"
+ GRN_Unitary_Doctrine:0 "REPLACE_ME"
+ GRN_Voice_of_the_People:0 "Voice of the People"
+ GRN_Tax_Reform:0 "National Tax Reform"
+ GRN_Currency_Reserves:0 "Securing our Currency Reserves"
+ GRN_Reform_Eqqartuussiviit:0 "Reform the Eqqartuussiviit"
+ GRN_Executive_Powers:0 "Powers of the Executive"
+ GRN_Highest_Law_of_the_Land:0 "Highest Law of the Land"
+ GRN_Inuit_National_Integration_Plan:0 "Inuit National Integration Plan"
+ GRN_ICC_Assistance:0 "ICC Assistance Programs"
+ GRN_Signing_New_Treaties:0 "Signing the New Treaties"
+ GRN_Inuit_Realms:0 "Unify the Inuit Realms"
+ GRN_Joining_United_Nations:0 "Joining the United Nations"
+ GRN_Forging_Global_Ties:0 "Forging Global Ties"
+ GRN_American_Cultural_Exports:0 "American Cultural Hegemony"
+ GRN_Mexican_Engineering:0 "Mexican Engineering Advise"
+ GRN_Canadian_Investments:0 "Canadian Financial Investment"
+ GRN_NAFTA_Cooperation:0 "Further Cooperation with NAFTA"
+ GRN_British_Ties:0 "REPLACE_ME"
+ GRN_eng1:0 "REPLACE_ME"
+ GRN_Australian_Mining_Contracts:0 "Australian Mining Contracts"
+ GRN_nzl1:0 "REPLACE_ME"
+ GRN_British_Crown_Investments:0 "British Crown Investments"
+ GRN_European_Ties:0 "Stargazing for the European Constellation"
+ GRN_German_STEM:0 "REPLACE_ME"
+ GRN_French_Military_Traditions:0 "REPLACE_ME"
+ GRN_eu1:0 "REPLACE_ME"
+ GRN_Erasmus_Program:0 "REPLACE_ME"
+ GRN_Belarusian_Agricultural_Collectives:0 "Belarusian Style Agricultural Collectives"
+ GRN_Kazakhstani_Security_Training:0 "Security Training with the Kazakhs"
+ GRN_Indian_Ties:0 "REPLACE_ME"
+ GRN_Chinese_Ties:0 "Soaring with the Chinese Dragon"
+ GRN_Arctic_Silk_Road:0 "Arctic Silk Road"
+ GRN_Near_Arctic_State:0 "Near Arctic State"
+ GRN_Japanese_Ties:0 ""
+ GRN_jp1:0 "REPLACE_ME"
+ GRN_roc1:0 "REPLACE_ME"
+ GRN_rok1:0 "REPLACE_ME"
+ GRN_high_tech:0 "REPLACE_ME"
+ armydoctrine_bonus:0 "REPLACE_ME"
+ airdoctrine_bonus:0 "REPLACE_ME"
+ GRN_Join_NAFTA:0 "REPLACE_ME"
+ GRN_Join_Commonwealth:0 "REPLACE_ME"
+ GRN_Rejoin_European_Union:0 "Rejoining the European Union"
+ GRN_Join_Eurasian_Union:0 "REPLACE_ME"
+ GRN_Join_SCO:0 "REPLACE_ME"
+ GRN_Join_NATO:0 "Enhanced Commitment to NATO"
+ GRN_Join_CSTO:0 "REPLACE_ME"
+ GRN_Reintegrate_into_the_Realm:0 "A New Danish Commonwealth"
+ 
+ GRN_High_Command_desc:0 "REPLACE_ME"
+ GRN_Refurbish_Abandoned_Equipment_desc:0 "REPLACE_ME"
+ GRN_Military_Factories_desc:0 "REPLACE_ME"
+ GRN_Joint_Arctic_Command_desc:0 "REPLACE_ME"
+ GRN_Winter_Acclimatization_Traning_desc:0 "REPLACE_ME"
+ GRN_Proficient_Arctic_Resilience_desc:0 "REPLACE_ME"
+ GRN_Mobile_Warfare_desc:0 "REPLACE_ME"
+ GRN_Adaptive_Technicals_desc:0 "REPLACE_ME"
+ GRN_Expanding_Response_Effectiveness_desc:0 "REPLACE_ME"
+ GRN_Domestic_Security_desc:0 "REPLACE_ME"
+ GRN_Civilian_Guard_desc:0 "REPLACE_ME"
+ GRN_Special_Forces_desc:0 "REPLACE_ME"
+ GRN_International_Security_desc:0 "REPLACE_ME"
+ GRN_Peacekeeping_Missions_desc:0 "REPLACE_ME"
+ GRN_Kangerlussuaq_Aviation_School_desc:0 "REPLACE_ME"
+ GRN_Technical_Assistance_Training_desc:0 "REPLACE_ME"
+ GRN_Thule_Base_Question_desc:0 "REPLACE_ME"
+ GRN_Continue_American_Leasing_desc:0 "REPLACE_ME"
+ GRN_Expand_Radar_Systems_desc:0 "REPLACE_ME"
+ GRN_Reaquire_Thule_Base_desc:0 "REPLACE_ME"
+ GRN_Improving_Base_Infrastructure_desc:0 "REPLACE_ME"
+ GRN_Naval_Exercises_desc:0 "REPLACE_ME"
+ GRN_Icebreaker_Fleet_desc:0 "REPLACE_ME"
+ GRN_Arctic_Fleet_Plans_desc:0 "REPLACE_ME"
+ construction_effort_tt_desc:0 "REPLACE_ME"
+ GRN_Qaanaq_Space_base_desc:0 "REPLACE_ME"
+ GRN_Atmospheric_Monitoring_desc:0 "REPLACE_ME"
+ GRN_Lidar_Climate_Research_desc:0 "REPLACE_ME"
+ GRN_Looking_to_the_Stars_desc:0 "REPLACE_ME"
+ industry_bonus_desc:0 "REPLACE_ME"
+ GRN_Innovative_Learning_desc:0 "REPLACE_ME"
+ GRN_Secure_School_Funding_desc:0 "REPLACE_ME"
+ GRN_Nurturing_Local_Industries_desc:0 "REPLACE_ME"
+ GRN_Air_Greenland_Coverage_desc:0 "REPLACE_ME"
+ GRN_Technical_Institutions_desc:0 "REPLACE_ME"
+ GRN_Invite_Foreign_Intellectuals_desc:0 "REPLACE_ME"
+ GRN_Subzero_Research_desc:0 "REPLACE_ME"
+ GRN_Improving_Northern_Agriculture_desc:0 "REPLACE_ME"
+ GRN_Greenhouse_Substinance_desc:0 "REPLACE_ME"
+ GRN_Light_Dairy_Industry_desc:0 "REPLACE_ME"
+ GRN_A_Hand_in_Refreshment_Making_desc:0 "REPLACE_ME"
+ GRN_Greenlandic_Resources_desc:0 "REPLACE_ME"
+ GRN_Offshore_Petroleum_Extraction_desc:0 "REPLACE_ME"
+ GRN_The_Arctic_Petroleum_Superpower_desc:0 "REPLACE_ME"
+ GRN_Export_Nuclear_Fuel_Abroad_desc:0 "REPLACE_ME"
+ GRN_Path_Foward_desc:0 "REPLACE_ME"
+ GRN_Climate_Change_Inititives_desc:0 "REPLACE_ME"
+ GRN_Environmental_Industrial_Policies_desc:0 "REPLACE_ME"
+ GRN_Promising_Future_desc:0 "REPLACE_ME"
+ GRN_Addressing_Industrial_Challenges_desc:0 "REPLACE_ME"
+ GRN_Riding_the_Tides_desc:0 "REPLACE_ME"
+ GRN_Prosperous_Future_desc:0 "REPLACE_ME"
+ GRN_No_Data_desc:0 "REPLACE_ME"
+ GRN_Managing_Food_Insecurity_desc:0 "REPLACE_ME"
+ GRN_Developing_Internet_Infrastructure_desc:0 "REPLACE_ME"
+ GRN_Hydrosphere_Management_desc:0 "REPLACE_ME"
+ GRN_Healthcare_Improvements_desc:0 "REPLACE_ME"
+ GRN_Rediscovering_Inuit_Identity_desc:0 "REPLACE_ME"
+ GRN_Promoting_Greenlandic_Language_desc:0 "REPLACE_ME"
+ GRN_Ignite_Inuit_Nationalism_desc:0 "REPLACE_ME"
+ GRN_National_Constitution_desc:0 "REPLACE_ME"
+ GRN_Reform_Inatsisartut_desc:0 "REPLACE_ME"
+ GRN_Presidential_Democracy_desc:0 "REPLACE_ME"
+ GRN_Consensus_Democracy_desc:0 "REPLACE_ME"
+ GRN_Parliamentary_Democracy_desc:0 "REPLACE_ME"
+ GRN_Federal_Doctrine_desc:0 "REPLACE_ME"
+ GRN_Unitary_Doctrine_desc:0 "REPLACE_ME"
+ GRN_Voice_of_the_People_desc:0 "REPLACE_ME"
+ GRN_Tax_Reform_desc:0 "REPLACE_ME"
+ GRN_Currency_Reserves_desc:0 "REPLACE_ME"
+ GRN_Reform_Eqqartuussiviit_desc:0 "REPLACE_ME"
+ GRN_Executive_Powers_desc:0 "REPLACE_ME"
+ GRN_Highest_Law_of_the_Land_desc:0 "REPLACE_ME"
+ GRN_Inuit_National_Integration_Plan_desc:0 "REPLACE_ME"
+ GRN_ICC_Assistance_desc:0 "REPLACE_ME"
+ GRN_Signing_New_Treaties_desc:0 "REPLACE_ME"
+ GRN_Inuit_Realms_desc:0 "REPLACE_ME"
+ GRN_Joining_United_Nations_desc:0 "REPLACE_ME"
+ GRN_Forging_Global_Ties_desc:0 "REPLACE_ME"
+ GRN_American_Cultural_Exports_desc:0 "REPLACE_ME"
+ GRN_Mexican_Engineering_desc:0 "REPLACE_ME"
+ GRN_Canadian_Investments_desc:0 "REPLACE_ME"
+ GRN_NAFTA_Cooperation_desc:0 "REPLACE_ME"
+ GRN_British_Ties_desc:0 "REPLACE_ME"
+ GRN_eng1_desc:0 "REPLACE_ME"
+ GRN_Australian_Mining_Contracts_desc:0 "REPLACE_ME"
+ GRN_nzl1_desc:0 "REPLACE_ME"
+ GRN_British_Crown_Investments_desc:0 "REPLACE_ME"
+ GRN_European_Ties_desc:0 "REPLACE_ME"
+ tooltip_focus_EU001_availability_desc:0 "REPLACE_ME"
+ GRN_German_STEM_desc:0 "REPLACE_ME"
+ GRN_French_Military_Traditions_desc:0 "REPLACE_ME"
+ GRN_eu1_desc:0 "REPLACE_ME"
+ GRN_Erasmus_Program_desc:0 "REPLACE_ME"
+ GRN_Belarusian_Agricultural_Collectives_desc:0 "REPLACE_ME"
+ GRN_Kazakhstani_Security_Training_desc:0 "REPLACE_ME"
+ GRN_Indian_Ties_desc:0 "REPLACE_ME"
+ GRN_Chinese_Ties_desc:0 "REPLACE_ME"
+ GRN_Arctic_Silk_Road_desc:0 "REPLACE_ME"
+ GRN_Near_Arctic_State_desc:0 "REPLACE_ME"
+ GRN_Japanese_Ties_desc:0 "REPLACE_ME"
+ GRN_jp1_desc:0 "REPLACE_ME"
+ GRN_roc1_desc:0 "REPLACE_ME"
+ GRN_rok1_desc:0 "REPLACE_ME"
+ GRN_high_tech_desc:0 "REPLACE_ME"
+ armydoctrine_bonus_desc:0 "REPLACE_ME"
+ airdoctrine_bonus_desc:0 "REPLACE_ME"
+ GRN_Join_NAFTA_desc:0 "REPLACE_ME"
+ GRN_Join_Commonwealth_desc:0 "REPLACE_ME"
+ GRN_Rejoin_European_Union_desc:0 "REPLACE_ME"
+ GRN_Join_Eurasian_Union_desc:0 "REPLACE_ME"
+ GRN_Join_SCO_desc:0 "REPLACE_ME"
+ GRN_Join_NATO_desc:0 "REPLACE_ME"
+ GRN_Join_CSTO_desc:0 "REPLACE_ME"
+ GRN_Reintegrate_into_the_Realm_desc:0 "REPLACE_ME"
  
