Adjustment of EDGE sequence

--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -419,7 +419,7 @@
  umts: "UMTS"
  umts_desc: "Universal Mobile Telecommunications System (UMTS) is a third-generation mobile cellular system for networks based on the GSM standard. Developed and maintained by the 3GPP, UMTS is a component of the IMT-2000 standard. It specifies a complete network system, which includes the radio access network, core network, and the authentications of users via SIM. This system requires greater installation of base stations and new frequency allocations."
  edge: "EDGE"
- edge_desc: "Unlike UMTS, Enhanced Data Rates for GSM Evolution (EDGE) doesn't require new base stations or new frequency allocations. Through the introduction of sophisticated methods of coding and transmitting data, EDGE delivers higher bit rates per radio channel."
+ edge_desc: "Unlike UMTS, Enhanced Data Rates for GSM Evolution (EDGE) doesn't require new base stations or new frequency allocations. Through the introduction of sophisticated methods of coding and transmitting data, EDGE delivers higher bit rates per radio channel. EDGE is sometimes called 2.75G."
  hsupa: "HSDPA/HSUPA"
  hsupa_desc: "High-Speed Uplink Packet Access (HSUPA) & High-Speed Downlink Packet Access (HSDPA) is an amalgamation of two mobile protocols. They extend and improve the performance of existing 3G mobile telecommunication networks using the WCDMA protocols."
  gprs: "GPRS"
