--- a/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_GER_l_simp_chinese.yml
@@ -335,8 +335,8 @@
  GER_Postbank: "邮政银行"
  GER_Postbank_desc: "邮政银行是一家德国零售银行，提供一系列金融服务，包括储蓄账户、贷款、抵押贷款和投资产品。"
  GER_Network_Infrastructure_desc: "网络基础设施是指实现用户、设备、应用程序、互联网等之间的网络连接和通信的硬件和软件。\n网络基础设施对于组织进行通信和信息流动至关重要。 它还使个人能够连接到互联网并访问政府提供的在线服务。"
- GER_UMTS_License_auction: "UMTS牌照拍卖"
- GER_UMTS_License_auction_desc: "德国的UMTS牌照拍卖于2000年举行，筹集了超过 458 亿美元的资金。此次拍卖由德国政府进行，并向包括德国电信、沃达丰和西班牙电信在内的多家公司授予了六张许可证。\n此次拍卖是移动通信史上的一件重大事件，标志着第三代（3G）移动网络的开始。"
+ GER_UMTS_License_auction: "通用移动通信系统牌照拍卖"
+ GER_UMTS_License_auction_desc: "德国的通用移动通信系统牌照拍卖于2000年举行，筹集了超过458亿美元的资金。此次拍卖由德国政府进行，并向包括德国电信、沃达丰和西班牙电信在内的多家公司授予了六张许可证。\n此次拍卖是移动通信史上的一件重大事件，标志着第三代（3G）移动网络的开始。"
  GER_Schulen_ans_Netz: "学校在线"
  GER_Schulen_ans_Netz_desc: "学校在线是一家德国非营利组织，旨在促进数字媒体在教育中的使用，以便更好地在数字平台上教育我们的孩子，与时俱进。"
  GER_Regional_Innovation_Center: "研究创新中心"
