--- a/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
@@ -331,18 +331,18 @@
  lifi_desc: "光照上网技术（Li-Fi）在功能上类似于Wi-Fi。 Li-Fi优于Wi-Fi的优点是它可以传输高达100Gbit/s的数据，由全球多家组织开发。"
  modern_satelite_internet: "现代卫星上网"
  modern_satelite_internet_desc: "随着卫星在通信和其他形式的数据传输中越来越普及，互联网就是这样一种利用卫星接入的服务，这为越来越多的人与互联网连接提供了可能。"
- lte: "LTE"
- lte_desc: "长期演进技术（LTE）是基于GSM/EDGE和UMTS/HSPA技术的移动设备和数据终端的无线宽带通信标准。"
- wimax: "WiMAX"
- wimax_desc: "全球互通微波存取（WiMAX）是基于IEEE 802.16标准的无线宽带通信标准。"
- umts: "UMTS"
- umts_desc: "通用移动通信系统（UMTS）是基于GSM标准的第3代网络移动通信系统，由第3代合作伙伴计划（3GPP）开发和维护，是IMT-2000标准的组成部分。由3GPP开发和维护，UMTS是IMT-2000标准的一个组成部分。它规定了一个完整的网络系统，包括无线接入网、核心网和通过SIM卡对用户进行认证。这个系统需要更多的基站安装和新的频率分配。"
- edge: "EDGE"
- edge_desc: "与UMTS不同，GSM增强数据率演进（EDGE）不需要新的基站或新分配频率。通过引入先进的编码和传输数据方法，EDGE可以为每个无线电信道提供更高的比特率。"
+ lte: "长期演进技术"
+ lte_desc: "长期演进技术是基于2G和3G技术的移动设备和数据终端的无线宽带通信标准。"
+ wimax: "全球互通微波存取"
+ wimax_desc: "全球互通微波存取是基于IEEE 802.16标准的无线宽带通信标准。"
+ umts: "通用移动通信系统"
+ umts_desc: "通用移动通信系统是基于全球移动通信系统标准的第3代网络移动通信系统，由第3代合作伙伴计划开发和维护，是IMT-2000标准的组成部分。它定义了一个完整的网络系统，包括无线接入网、核心网和通过SIM卡对用户进行认证。这个系统需要更多的基站安装和新的频率分配。"
+ edge: "增强数据率演进"
+ edge_desc: "与通用移动通信系统不同，全球移动通信系统增强数据率演进不需要新的基站或新分配频率。通过引入先进的编码和传输数据方法，增强数据率演进可以为每个无线电信道提供更高的比特率。增强数据率演进有时也被称为2.75G。"
  hsupa: "高速上/下行分组接入"
- hsupa_desc: "高速上行分组接入（HSUPA）与高速下行分组接入（HSDPA）是两种移动协议的结合。它们利用WCDMA协议扩展和改善了现有3G移动通信网络的性能。"
+ hsupa_desc: "高速上行分组接入与高速下行分组接入是两种移动协议的结合。它们利用宽带码分多址协议扩展和改善了现有3G移动通信网络的性能。"
  gprs: "通用分组无线服务"
- gprs_desc: "通用分组无线服务（GPRS）是一种基于分组的无线通信服务，它承诺为移动电话和计算机用户提供56至114kbps的数据速率和持续连接互联网。该设备是围绕2G和3G蜂窝通信网络的全球移动通信系统进行设计的。"
+ gprs_desc: "通用分组无线服务是一种基于分组的无线通信服务，它承诺为移动电话和计算机用户提供56至114kbps的数据速率和持续连接互联网。该设备是围绕2G和3G蜂窝通信网络的全球移动通信系统进行设计的。"
  civilian_folder: "工业科技"
  civilian_folder_desc: "21世纪的技术，如基因工程，纳米纤维和人工智能。"
  Cat_AI: "人工智能技术"
