--- a/localisation/simp_chinese/MD_bookmarks_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_bookmarks_l_simp_chinese.yml
@@ -110,3 +110,4 @@
  IND_MILLENNIUM_DAWN_DESC: "尽管受到经济困难的影响，印度尼西亚仍然是东南亚事务的中心。1997年的亚洲金融危机使印尼货币卢比大幅贬值，给这个群岛国家带来了很大的不稳定，亚齐省的大火进一步加剧了这种不稳定。不断上升的通货膨胀、激进主义和国家不团结导致其落后于邻国和世界其他国家，这让其领导人摸不着头脑，不知道如何才能在21世纪生存下去。"
  PMR_MILLENNIUM_DAWN_DESC: "2000年，摩尔多瓦的一个分离地区德涅斯特河沿岸陷入了旷日持久的政治僵局。该地区于1990年宣布独立，自称为共和国，但其主权仍未得到国际承认。在伊戈尔·斯米尔诺夫总统的领导下，德涅斯特河沿岸保留了自己的机构和安全部队，建立了事实上的国家地位。然而，与摩尔多瓦的紧张关系持续存在，和解努力因经济制裁、走私和对该地区地位缺乏共识而受到阻碍。国际组织斡旋的谈判寻求和平解决，但德涅斯特河沿岸的政治局势仍然复杂且悬而未决，其特点是独立愿望与地缘政治现实之间的脆弱平衡。"
  CUB_MILLENNIUM_DAWN_DESC: "在美丽的古巴岛上，阳光温暖着棕榈树，海风轻轻拂过海岸，但2000年的气氛发生了变化。在加勒比海的中心地带，在这片温暖而美丽的绿洲上，有着丰富的传统和文化遗产的历史。然而，在这丰富美景的阴影下，政治势力的激烈斗争仍在继续进行。该国的政治局势紧张，反映了持久的权力斗争和意识形态斗争。尽管如此，古巴人民的精神依然坚不可摧，他们心中充满了对光明未来的希望和对正义的信念。"
+ SMA_MILLENNIUM_DAWN_DESC: "圣马力诺是一个国土面积非常小的国家，它完全依靠意大利。由于是内陆国，没有机场，它高度依赖旅游业，旅游业占该国GDP的很大一部分。圣马力诺实际仍然是意大利的领土，是否跟随意大利，或是要走自己的道路？目前，这一切都由两名执政官决定，他们由大议会任命，任期为6个月。大议会有60名议员。同时也有阿伦戈，即市民大会，市民大会是古代最高权力机构，但现在几乎完全丧失了权力，只保留了请愿权。执政官在4月1日和10月1日后的第一个星期日接收市民提交的请愿书。提交的请愿书将在6个月内进行审查。"
