--- a/localisation/simp_chinese/MD_focus_BUL_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BUL_l_simp_chinese.yml
@@ -281,7 +281,7 @@
  BUL_albania_never_heard: "阿尔巴尼亚？从来没有听说过"
  BUL_ally_serbia: "我们的东正教兄弟"
  BUL_bully_our_orthodox_bros: "镇压冒牌货"
- BUL_bosnian_friendship: "你好。波斯尼亚？"
+ BUL_bosnian_friendship: "你好，波斯尼亚？"
  BUL_bosnian: "击垮波斯尼亚"
  BUL_croatian_question: "克罗地亚问题"
  BUL_demand_slovenia: "索取斯洛文尼亚"
