--- a/localisation/simp_chinese/MD_missiles_models_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_missiles_models_l_simp_chinese.yml
@@ -327,7 +327,7 @@
  missile_CHI_ID_15_loc_key: "东风-31A"
  missile_CHI_ID_16_loc_key: "东风-31AG"
  missile_CHI_ID_17_loc_key: "东风-41"
- missile_CHI_ID_18_loc_key: "东风--51"
+ missile_CHI_ID_18_loc_key: "东风-51"
  missile_CHI_ID_21_loc_key: "东风--2"
  missile_CHI_ID_22_loc_key: "东风-2A"
  missile_CHI_ID_23_loc_key: "东风-21"
@@ -1403,21 +1403,21 @@
  nuclear_warhead_generic_ID_10_loc_key: "300万吨当量热核弹头"
  nuclear_warhead_generic_ID_11_loc_key: "500万吨当量热核弹头"
  nuclear_warhead_generic_ID_12_loc_key: "1000万吨当量热核弹头"
- nuclear_warhead_generic_ID_13_loc_key: "迷你核弹 5000吨当量"
- nuclear_warhead_generic_ID_14_loc_key: "中子弹 1000吨当量"
+ nuclear_warhead_generic_ID_13_loc_key: "5000吨当量迷你核弹头"
+ nuclear_warhead_generic_ID_14_loc_key: "1000吨当量中子弹头"
  nuclear_warhead_generic_ID_15_loc_key: "脏弹"
- conventional_warhead_generic_ID_0_loc_key: "450公斤高爆炸弹"
- conventional_warhead_generic_ID_1_loc_key: "450公斤集束炸弹 "
- conventional_warhead_generic_ID_2_loc_key: "450公斤燃烧弹"
+ conventional_warhead_generic_ID_0_loc_key: "450公斤高爆弹头"
+ conventional_warhead_generic_ID_1_loc_key: "450公斤集束弹头"
+ conventional_warhead_generic_ID_2_loc_key: "450公斤燃烧弹头"
  conventional_warhead_generic_ID_3_loc_key: "450公斤电子对抗弹头"
  conventional_warhead_generic_ID_4_loc_key: "反辐射弹头"
  conventional_warhead_generic_ID_5_loc_key: "电磁脉冲弹头"
  conventional_warhead_generic_ID_6_loc_key: "电磁脉冲弹头"
  conventional_warhead_generic_ID_7_loc_key: "温压弹"
- conventional_warhead_generic_ID_8_loc_key: "900公斤高爆炸弹 "
- conventional_warhead_generic_ID_9_loc_key: "900公斤集束炸弹 "
- conventional_warhead_generic_ID_10_loc_key: "900公斤燃烧弹"
- conventional_warhead_generic_ID_11_loc_key: "900公斤「地堡克星」"
+ conventional_warhead_generic_ID_8_loc_key: "900公斤地堡克星"
+ conventional_warhead_generic_ID_9_loc_key: "900公斤集束弹头"
+ conventional_warhead_generic_ID_10_loc_key: "900公斤燃烧弹头"
+ conventional_warhead_generic_ID_11_loc_key: "900公斤地堡克星"
  missile_GER_ID_11_loc_key: "CGM-16 阿特拉斯"
  missile_GER_ID_12_loc_key: "HGM-25A 泰坦 I"
  missile_GER_ID_13_loc_key: "LGM-25C 泰坦 II"
