--- a/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
@@ -2186,7 +2186,7 @@
  silo_4_desc: "每个§Y导弹发射井复合体§!配备§Y6个筒仓§!。"
  silo_5: "多重防护掩体"
  silo_5_desc: "每个§Y导弹发射井复合体§!配备§Y8个筒仓§!。\n在洲际弹道导弹基地的“多重防护掩体”概念中，导弹将与数千个发射井协同，导弹将在发射井之间定期移动，这样敌人就不会知道它们在哪里。敌人不得不攻击每一个发射井才能重创整个弹道导弹部队。 如果有足够多的发射井，敌人为了摧毁几枚导弹需要耗费大量的弹头库存，这种成本极高的方案是敌人不会考虑的。"
- silo_6: "密集阵 (Dense Pack)"
+ silo_6: "密集阵"
  silo_6_desc: "每个§Y导弹发射井复合体§!配备§Y10个筒仓§!。\n在\"密集阵\"策略中，10个加固的发射筒仓将密集地布设在一起。这条发射井线通常会沿着预期的导弹来袭方向布设。每个“超加固”发射井都需要直接命中才能被摧毁。当第一枚弹头爆炸时会产生巨大的碎片云，喷射到数千英尺高的空中。当下一个弹头到达时，它会撞击这些碎片并被摧毁。这种策略也被称为“碎片防御”。"
  silo_7: "快速发射地下发射井"
  silo_7_desc: "每个§Y导弹发射井复合体§!配备§Y12个筒仓§!。"
@@ -2544,20 +2544,20 @@
  nuclear_technology_desc: "核技术"
  reactor1: "镁诺克斯反应堆"
  reactor1_desc: "镁诺克斯反应堆使用天然铀作为燃料，以二氧化碳气体作为冷却剂。最早的反应堆是在20世纪50年代末建造的，直到20世纪70年代被轻水反应堆所取代。它简单的设计和低能量密度使其成为安全且经济的第一代代反应堆。"
- reactor2: "轻水反应堆 (LWR)"
+ reactor2: "轻水反应堆"
  reactor2_desc: "轻水反应堆是使用普通水作为冷却剂和中子减速剂的反应堆的统称。因其相对简单的设计和低廉的造价，它的三种类型成为了目前最常见的核反应堆。作为前代反应堆的技术突破成果，它们被称作\"第二代商用能源反应堆\"。"
  reactor3: "先进沸水反应堆"
  reactor3_desc: "先进沸水反应堆是在原有沸水系统的基础上改进的一种类型。其最先进的沸水系统使其成为最早的第3代反应堆。安全方面的多项新功能和数字控制的增加使该反应堆相比早期的反应堆有了质的飞跃。"
- reactor4: "System 80+ 压水堆"
- reactor4_desc: "新版本的 System 80压水堆标志着许多成本和安全方面的改进。这个强大的反应堆不仅可以处理民用级别的钚，甚至可以储存武器级钚以备未来使用。"
- reactor5: "AP1000 (先进压水反应堆)"
+ reactor4: "System 80+"
+ reactor4_desc: "新版本的System 80压水反应堆标志着许多成本和安全方面的改进。这个强大的反应堆不仅可以处理民用级别的钚，甚至可以储存武器级钚以备未来使用。"
+ reactor5: "AP1000"
  reactor5_desc: "压水技术的进步降低了反应堆的成本并提高了效率。现有的被动安全系统在同等性能下所需的人力更少。 即便初代小型设计 (AP600) 是世界上第一个三代反应堆，但它仍没有达到足够的成本效益。"
- reactor6: "VVER-1200 (水-水高能反应堆)"
+ reactor6: "VVER-1200"
  reactor6_desc: "容量和燃料效率的提高使核裂变达到了新的高度。完善的现代安全系统和新的燃料替换周期不仅延长了使用寿命，还使效率提高到至少90%。"
- reactor7: "APWR (先进压水堆)"
- reactor7_desc: "先进压水堆具有几个设计改进，包括中子反射器，改进的效率和安全系统。它集成了双列主动和被动安全系统，进一步降低了风险。"
- reactor8: "CFR-1000 (快中子反应堆)"
- reactor8_desc: "其较小的前身 (CFR-600) 旨在测试用液态钠取代“普通”水冷却剂的新方法。 CFR-1000 是规模较大的商业化反应堆，且很容易处理武器级钚。"
+ reactor7: "先进压水反应堆"
+ reactor7_desc: "先进压水反应堆具有几个设计改进，包括中子反射器，改进的效率和安全系统。它集成了双列主动和被动安全系统，进一步降低了风险。"
+ reactor8: "CFR-1000"
+ reactor8_desc: "其较小的前身 (CFR-600) 旨在测试用液态钠取代“普通”水冷却剂的新方法。CFR-1000是规模较大的商业化反应堆，且很容易处理武器级钚。"
  reactor9: "熔盐反应堆"
  reactor9_desc: "有别于其他反应堆使用\"普通\"水作为冷却剂，熔盐反应堆使用一种特殊的混合物使反应堆能够在接近大气压力的环境下工作。它还可以吸收从堆芯生成的放射性气体，从而减少了对大型、昂贵的防护结构的需要。"
  reactor10: "超高温反应堆"
@@ -2588,38 +2588,38 @@
  nuclear_warhead_11_desc: "500万吨当量热核弹头"
  nuclear_warhead_12: "1000万吨当量热核弹头"
  nuclear_warhead_12_desc: "1000万吨当量热核弹头"
- nuclear_warhead_13: "迷你核弹 5000吨当量"
- nuclear_warhead_13_desc: "迷你核弹 5000吨当量"
- nuclear_warhead_14: "中子弹 1000吨当量"
- nuclear_warhead_14_desc: "中子弹 1000吨当量"
+ nuclear_warhead_13: "5000吨当量迷你核弹头"
+ nuclear_warhead_13_desc: "5000吨当量迷你核弹头"
+ nuclear_warhead_14: "1000吨当量中子弹头"
+ nuclear_warhead_14_desc: "1000吨当量中子弹头"
  nuclear_warhead_15: "脏弹"
  nuclear_warhead_15_desc: "脏弹"
  conventional_warheads: "常规弹头"
  conventional_warheads_desc: "常规弹头"
- conventional_warhead_0: "450公斤高爆炸弹"
- conventional_warhead_0_desc: "450公斤高爆炸弹：\n战略打击伤害：1  战术打击组织度伤害：1  战术打击人力伤害：1\n可选目标：民用工厂、 军用工厂、基础设施、 通信基础设施、海军船坞、空军基地、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公园区、海军基地、补给中心、铁路"
- conventional_warhead_1: "450公斤集束炸弹 "
- conventional_warhead_1_desc: "450公斤集束炸弹 ：\n战略打击伤害：2  战术打击组织度伤害：1  战术打击人力伤害：1\n可选目标：民用工厂、 军用工厂、基础设施、 通信基础设施、海军船坞、空军基地、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公区、海军基地、补给中心、铁路"
- conventional_warhead_2: "450公斤燃烧弹"
- conventional_warhead_2_desc: "450公斤燃烧弹：\n战略打击伤害：3  战术打击组织度伤害：1  战术打击人力伤害：0\n可选目标: 民用工厂、 军用工厂、防空导弹阵地、导弹发射车阵地、生物燃料精炼厂、战略燃料储备库、办公园区、补给中心"
+ conventional_warhead_0: "450公斤高爆弹头"
+ conventional_warhead_0_desc: "450公斤高爆弹头：\n战略打击伤害：1  战术打击组织度伤害：1  战术打击人力伤害：1\n可选目标：民用工厂、 军用工厂、基础设施、 通信基础设施、海军船坞、空军基地、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公园区、海军基地、补给中心、铁路"
+ conventional_warhead_1: "450公斤集束弹头"
+ conventional_warhead_1_desc: "450公斤集束弹头 ：\n战略打击伤害：2  战术打击组织度伤害：1  战术打击人力伤害：1\n可选目标：民用工厂、 军用工厂、基础设施、 通信基础设施、海军船坞、空军基地、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公区、海军基地、补给中心、铁路"
+ conventional_warhead_2: "450公斤燃烧弹头"
+ conventional_warhead_2_desc: "450公斤燃烧弹头：\n战略打击伤害：3  战术打击组织度伤害：1  战术打击人力伤害：0\n可选目标: 民用工厂、 军用工厂、防空导弹阵地、导弹发射车阵地、生物燃料精炼厂、战略燃料储备库、办公园区、补给中心"
  conventional_warhead_3: "电子对抗弹头"
  conventional_warhead_3_desc: "电子对抗弹头：\n战略打击伤害：2  战术打击组织度伤害：0  战术打击人力伤害：0\n可选目标：通信基础设施、雷达站、防空导弹阵地、核反应堆、办公区"
  conventional_warhead_4: "反辐射弹头"
  conventional_warhead_4_desc: "反辐射弹头：\n战略打击伤害：4  战术打击组织度伤害：0  战术打击生命值伤害：0\n可选目标：通信基础设施、雷达站、防空导弹阵地"
  conventional_warhead_5: "电磁脉冲弹头"
  conventional_warhead_5_desc: "电磁脉冲弹头：\n战略打击伤害：3  战术打击组织度伤害：0  战术打击人力伤害：0\n可选目标：通信基础设施、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、办公园区"
- conventional_warhead_6: "反跑道炸弹"
- conventional_warhead_6_desc: "反跑道炸弹：\n战略打击伤害：3  战术打击组织度伤害：0  战术打击人力伤害：1\n可选目标：基础设施、空军基地、海军基地、补给中心、铁路"
+ conventional_warhead_6: "反跑道弹头"
+ conventional_warhead_6_desc: "反跑道弹头：\n战略打击伤害：3  战术打击组织度伤害：0  战术打击人力伤害：1\n可选目标：基础设施、空军基地、海军基地、补给中心、铁路"
  conventional_warhead_7: "温压弹"
  conventional_warhead_7_desc: "温压弹：\n战略打击伤害：4  战术打击组织度伤害：1  战术打击人力伤害：0\n可选目标：民用工厂、军用工厂、海军船坞、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公区、海军基地、补给中心"
- conventional_warhead_8: "900公斤高爆炸弹 "
- conventional_warhead_8_desc: "900公斤高爆炸弹 ：\n战略打击伤害：2  战术打击组织度伤害：1  战术打击人力伤害：1\n可选目标：民用工厂、 军用工厂、基础设施、 通信基础设施、海军船坞、空军基地、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公区、海军基地、补给中心、铁路"
- conventional_warhead_9: "900公斤集束炸弹 "
- conventional_warhead_9_desc: "900公斤集束炸弹 ：\n战略打击伤害：3  战术打击组织度伤害：1  战术打击人力伤害：1\n可选目标：民用工厂、 军用工厂、基础设施、 通信基础设施、海军船坞、空军基地、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公区、海军基地、补给中心、铁路"
- conventional_warhead_10: "900公斤燃烧弹"
- conventional_warhead_10_desc: "900公斤燃烧弹：\n战略打击伤害：4  战术打击组织度伤害：1  战术打击人力伤害：0\n可选目标: 民用工厂、 军用工厂、防空导弹阵地、导弹发射车阵地、生物燃料精炼厂、战略燃料储备库、办公区、补给中心"
- conventional_warhead_11: "900公斤「地堡克星」"
- conventional_warhead_11_desc: "900公斤「地堡克星」：\n战略打击伤害：4  战术打击组织度伤害：1  战术打击人力伤害：0\n可选目标：民用工厂、 军用工厂、基础设施、 海军船坞、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公区、海军基地、陆地碉堡、岸防碉堡、补给中心、铁路"
+ conventional_warhead_8: "900公斤高爆弹头"
+ conventional_warhead_8_desc: "900公斤高爆弹头：\n战略打击伤害：2  战术打击组织度伤害：1  战术打击人力伤害：1\n可选目标：民用工厂、 军用工厂、基础设施、 通信基础设施、海军船坞、空军基地、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公区、海军基地、补给中心、铁路"
+ conventional_warhead_9: "900公斤集束弹头"
+ conventional_warhead_9_desc: "900公斤集束弹头：\n战略打击伤害：3  战术打击组织度伤害：1  战术打击人力伤害：1\n可选目标：民用工厂、 军用工厂、基础设施、 通信基础设施、海军船坞、空军基地、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公区、海军基地、补给中心、铁路"
+ conventional_warhead_10: "900公斤燃烧弹头"
+ conventional_warhead_10_desc: "900公斤燃烧弹头：\n战略打击伤害：4  战术打击组织度伤害：1  战术打击人力伤害：0\n可选目标: 民用工厂、 军用工厂、防空导弹阵地、导弹发射车阵地、生物燃料精炼厂、战略燃料储备库、办公区、补给中心"
+ conventional_warhead_11: "900公斤地堡克星"
+ conventional_warhead_11_desc: "900公斤地堡克星：\n战略打击伤害：4  战术打击组织度伤害：1  战术打击人力伤害：0\n可选目标：民用工厂、 军用工厂、基础设施、 海军船坞、雷达站、防空导弹阵地、反弹道导弹基地、导弹发射车阵地、洲际弹道导弹发射井、核反应堆、生物燃料精炼厂、战略燃料储备库、办公区、海军基地、陆地碉堡、岸防碉堡、补给中心、铁路"
  USA_ICBM1: "CGM-16 阿特拉斯"
  USA_ICBM2: "HGM-25A 泰坦 I"
  USA_ICBM3: "LGM-25C 泰坦 II"
@@ -2841,7 +2841,7 @@
  CHI_ICBM5: "东风-31A"
  CHI_ICBM6: "东风-31AG"
  CHI_ICBM7: "东风-41"
- CHI_ICBM8: "东风--51"
+ CHI_ICBM8: "东风-51"
  CHI_IRBM1: "东风--2"
  CHI_IRBM2: "东风-2A"
  CHI_IRBM3: "东风-21"
