--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1258,7 +1258,7 @@
  SOV_reunite_with_serbia_desc: "Serbia is our brother nation. We have taken multiple steps to integrat with each other, now it's time for the final stroke."
  SOV_sozdat_union_states: "§YCreate§! a Union State By §RForce§!"
 
- SER_serbia_ready_union_state: "§YPercentage§! of §Y[SER.GetNameWithFlag]§! readiness to integrate into the §YUnion State§ is equal to §Y[?SER.union_state]%§!"
+ SER_serbia_ready_union_state: "§YPercentage§! of §Y[SER.GetNameWithFlag]§! readiness to integrate into the §YUnion State§! is equal to §Y[?SER.union_state]%§!"
  #Ideas
  UNION_blr_citizen: "§4Integration of the Union State§!: Single Citizenship"
  UNION_sov_citizen: "§4Integration of the Union State§!: Single Citizenship"
