--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -319,6 +319,7 @@
  CUB_reforming_army_idea: "Reforming Army"
  CUB_youth_army: "Youth Labor Army"
  CUB_avia_idea: "Cuban Air Force"
+ CUB_castros_new_idea: "Castro's New Ideas"
  CUB_rauls_four_reforms: "Economic Actualisation Programme"
  CUB_idea_migration_crisis: "Illegal Migration"
  CUB_idea_migration_crisis_desc: "Migration, has become a big problem for our country. Every day hundreds of professionals leave our country illegally in search of a better life. You can remove this national spirit by doing the "Combating Illegal Migration" focus."
