--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1183,7 +1183,7 @@
  BLR_joint_military_academies_desc: "Our military will be able to train according to the same standards, which will significantly strengthen the combat power of the Union state"
  BLR_harmonization_of_legislation: "[union_state_flag_sov_or_blr]§YHarmonization§! of Legislation"
  BLR_harmonization_of_legislation_desc: "The key priority is the harmonization of our legislation with the legislation of the Union state"
- BLR_influency_union_states: "[union_state_flag_sov_or_blr]§YIncrease§! the Influence of the Union State"
+ BLR_influency_union_state: "[union_state_flag_sov_or_blr]§YIncrease§! the Influence of the Union State"
  BLR_influency_union_state_desc: "In order to include new members in the Union State, it is necessary to raise the support of the population in order to successfully carry out integration"
  BLR_state_structures: "[union_state_flag_sov_or_blr]§YComplete Formation§! of State Structures"
  BLR_state_structures_desc: "Now we need to adopt the relevant documents that will finally confirm the legislative force of the authorities of the Union State"
@@ -1193,8 +1193,8 @@
  BLR_common_resource_markets_desc: "For full integration, we need a single resource market. We will adopt appropriate legislative acts to regulate this issue"
  BLR_citizenship_of_the_union: "[union_state_flag_sov_or_blr]§YCitizenship§! of the Union State"
  BLR_citizenship_of_the_union_desc: "The citizenship of the Union State is an important issue that we must legislate, since the Union State is a supranational entity, here we need to adopt a list of laws"
- BLR_president_ups: "[union_state_flag_sov_or_blr]§YArrange§! a Meeting of Presidents"
- BLR_president_ups_desc: "We should organize a meeting between the presidents of our countries, of course with a broadcast on television to convince the people to continue integration"
+ BLR_president_up: "[union_state_flag_sov_or_blr]§YArrange§! a Meeting of Presidents"
+ BLR_president_up_desc: "We should organize a meeting between the presidents of our countries, of course with a broadcast on television to convince the people to continue integration"
  BLR_up_pro_union_state_parties: "[union_state_flag_sov_or_blr]§YSupport§! Pro-union Parties"
  BLR_up_pro_union_state_parties_desc: "Pro-union parties should have decisive power in the candidate countries, so we will strengthen their influence"
  SOV_nuclear_to_belarus: "[union_state_flag_sov_or_blr]§YTransfer§! Nuclear Weapons to §Y[BLR.GetNameWithFlag]§!"
