--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -2,6 +2,7 @@
  cuba_focus: "Cuban Focus Tree"
  #tooltip
  CUB_parlament_one: "§GThe dismissal of officials and the creation of a new parliament will begin§!"
+ raul_strenght_power_tt: "§GRaul will strengthen his position in the party§!"
  CUB_allow_elections_tt: "§GElections will be allowed§!"
  CUB_allow_parties_tt: "§GWe will allow some opposition parties§!"
  CUB_migel_comeback: "§YMigel Mario Diaz will become leader of Partido Communista de Cuba§! §G(emerging outlook)§!"
