Changelog + Bookmark (NOR)

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -59,8 +59,8 @@ v1.10.0
   - Added Answer events for Indian Proposal to U.S. to remove Pakistan from MNNA list Event
 
  Content:
-  - NEW TREE: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
-  - NEW REWORKED TREE: Donetsk PR, Transnistria, Lugansk PR, Belarus, Denmark
+  - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
+  - NEW REWORKED TREES: Donetsk PR, Transnistria, Lugansk PR, Belarus, Denmark, Norway
   - The Union state of Russia and Belarus gives more national spirits during the annexation
   - Some decisions have been removed from the mechanics of the Russian subjects
   - Add Ryukyu to the game
