opinion for union state

--- a/localisation/english/MD_opinion_modifiers_l_english.yml
+++ b/localisation/english/MD_opinion_modifiers_l_english.yml
@@ -255,6 +255,8 @@
  europe_russia_economic_deals: "Russo-European Economic Deals"
  enemy_number_one: "Enemy Number 1"
  ideological_enemy: "Ideological Enemies"
+ union_stated: "Integration of the Union State"
+ bad_revoult: "Failed Coup"
 
  #Iran
  uss_vincennes: "Shot down our civilian aircraft in 1988"
