North korean naval ai rework

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,8 @@ v1.10.0
   - Reworked AI stockpile, production, and target templates
   - Removed AI dump decisions to monthly tick - should increase performance negligably
   - Hezbollah should now send volunteers to Shia countries properly
+  - Added new Naval Equipment AI Designs for North Korea
+  - Updated North Korean Naval AI to change fleet composition upon Reunification (They should go for a more Blue water navy than a Green Water Navy)
 
  Balance:
   - Increased Strength losses in combat by (around 2 times greater), to make losses more realistic and decrease amount of 0 losses in combat
