nazbol finish blr

--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1453,6 +1453,10 @@
  BLR_ukraine_campaign_desc: "Our Southern neighbor is showing signs of what it can do in a military-political bloc hostile to us, followed by an attack on us, we must strike first!"
  BLR_ukraine_campaign_border_prepare: "Strengthen The Border With Ukraine"
  BLR_ukraine_campaign_border_prepare_desc: "Despite the fact that we are attacking, we should take care of possible scenarios, so we will prepare fortifications on the border"
+ BLR_poland_campaign_border_prepare: "Strengthen The Border With Poland"
+ BLR_poland_campaign_border_prepare_desc: "Despite the fact that we are attacking, we should take care of possible scenarios, so we will prepare fortifications on the border"
+ BLR_poland_campaign_war: "Start A Poland Campaign"
+ BLR_poland_campaign_war_desc: "Our Army is ready! forward to Warsaw!"
  BLR_ukraine_campaign_war: "Start A Ukrainian Campaign"
  BLR_ukraine_campaign_war_desc: "Our Army is ready! forward to Kiev!"
  BLR_military_nazbol: "Investments in The Military Industry"
